# Path_Tracer

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  path_tracer
res/configs/: test_config.json
res/scenes/: single_sphere.json  single_triangle.json  test_man_obj.json  test_obj.json  test_obj_ball.json  test_scene.json  two_spheres.json
scripts/: format.sh
src/: CMakeLists.txt  PixelBuffer.cpp  PixelBuffer.h  Window.cpp  Window.h  main.cpp
src/RayTracer/: CMakeLists.txt  Camera.h  Hit.h  Ray.h  RayTracer.cpp  RayTracer.h
src/Scene/: BVH.cpp  BVH.h  BoundingBox.h  CMakeLists.txt  Light.cpp  Light.h  Material.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
src/Utils/: CMakeLists.txt  Config.cpp  Config.h  ModelLoader.cpp  ModelLoader.h  ObjLoader.cpp  ObjLoader.h  ObjModel.cpp  ObjModel.h  Vec3.h
src/Window/: CMakeLists.txt  PixelBuffer.cpp  PixelBuffer.h  Window.cpp  Window.h
